# macMpi

./: .gitignore  CMakeLists.txt  README.md
formula/: macmpi.rb
include/: mpi.h
src/: collectives.c  dummy  dummy.c  engine.c  mpi.c  mpi_internal.h  mpirun  mpirun.c
tests/: hello_env.c  hello_mpi.c  test_Anytag.c  test_allgather.c  test_allreduce.c  test_alltoall.c  test_barrier.c  test_bcast.c  test_engine.c  test_gather.c  test_header.c  test_kqueue.c  test_reduce.c  test_scatter.c
